welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value &&
    if ((nums(l)<3 && nums(l-1)==7 && nums(l-2)==2)||(nums(l)==9 && nums(l-1)== && nums(l-2)==2)){
                                                                                ^